Die Zielstellung wurde vereinheitlicht und eine Fussnote fur Integration wurde hinzugefuegt

--- a/references.bib
+++ b/references.bib
@@ -755,3 +755,12 @@ Ein {HTML}-Renderer ist also Teil eines Webbrowsers, der einer eher semantisch o
 	note = {Page Version {ID}: 196062351},
 	file = {Snapshot:/Users/eddie/Zotero/storage/2PPZSQNS/index.html:text/html}
 }
+
+@online{noauthor_continuous_nodate,
+	title = {Continuous Integration},
+	url = {https://martinfowler.com/articles/continuousIntegration.html},
+	abstract = {Continuous Integration occurs when all developers push their changes to mainline at least once per day, with automated tests to detect integration errors. This greatly reduces integration pain.},
+	titleaddon = {martinfowler.com},
+	urldate = {2020-07-08},
+	note = {Library Catalog: www.martinfowler.com}
+}
