--- a/sections/Einleitung.tex
+++ b/sections/Einleitung.tex
@@ -44,7 +44,7 @@ Trotz der Informationslage ist es noch unbekannt, ob auch Start-ups\footnotemark
 \footnotetext{
 Ein Start-up, oder auch Start-up-Unternehmen, ist ein junges, noch nicht etabliertes Unternehmen, welches eine innovative Geschäftsidee verwirklichen möchte \parencite[vgl.][]{achleitner_start-up_2018}.}
 
-Das Ziel dieser Arbeit ist es deshalb, für PluraPolit die Bedingungen zu ermitteln, die für eine mögliche Umstellung erforderlich sind und eine klare Bewertung für den Nutzen des Vorhabens abzugeben. Es sollen die notwendigen Anforderungen an ein Unternehmen ausgearbeitet werden, das sein System von einer monolithischen Architektur zu einer Microservice-Architektur umstellen möchte.
+Das Ziel dieser Arbeit ist es deshalb, für PluraPolit die Bedingungen zu ermitteln, die für eine mögliche Umstellung erforderlich sind und eine klare Beurteilung für das Vorhaben abzugeben. Es sollen die notwendigen Anforderungen an ein Unternehmen ausgearbeitet werden, das sein System von einer monolithischen Architektur zu einer Microservice-Architektur umstellen möchte.
 
 
 \subsection{Vorgehen}
