--- a/sections/Fazit.tex
+++ b/sections/Fazit.tex
@@ -1,6 +1,6 @@
 \section{Fazit}
-%Todo noch einmal überarbeiten und in zwei Sätze teilen
-Diese Abhandlung hatte das Ziel, die Bedingungen für PluraPolit zu ermitteln, die für eine mögliche Umstellung von einer monolithischen auf eine Microservice-Architektur notwendig sind und eine klare Bewertung für den Nutzen des Vorhabens abzugeben. 
+
+Diese Abhandlung hatte das Ziel, die Bedingungen für PluraPolit zu ermitteln, die für eine mögliche Umstellung von einer monolithischen auf eine Microservice-Architektur notwendig sind und eine klare Beurteilung für das Vorhaben abzugeben. 
  
  Zu diesem Zweck wurden erste Bedingungen aus einer Literaturrecherche abgeleitet und von Experten innerhalb eines quantitativen Leitfadeninterviews validiert.
 
