--- a/sections/Methodik/ergebnisse/frage3.tex
+++ b/sections/Methodik/ergebnisse/frage3.tex
@@ -17,4 +17,6 @@ Aus den technischen Anforderungen Monitoring, Sicherheit und Fehlermanagement ge
 \textit{\enquote{[…] es [braucht] einen Entwickler, der sich mit dem Aufbau der Infrastruktur auskennt.}} (siehe \combref{appendix:t-33})
 }
 
-Herr Rahles bestärkte ebenfalls diese Schlussfolgerung, indem er die \textit{\enquote{heutzutage geltenden Best Practices als Anforderung}} nannte (siehe \combref{appendix:r-26}). Er führte diese Bedingung noch weiter aus und zählte automatische Tests, sowie einen automatischen Integration- und Deployment-Prozess zu den erforderlich Maßnamen (siehe \combref{appendix:r-27}).
+Herr Rahles bestärkte ebenfalls diese Schlussfolgerung, indem er die \textit{\enquote{heutzutage geltenden Best Practices als Anforderung}} nannte (siehe \combref{appendix:r-26}). Er führte diese Bedingung noch weiter aus und zählte automatische Tests, sowie einen automatischen Integration-\footnotemark und Deployment-Prozess zu den erforderlich Maßnamen (siehe \combref{appendix:r-27}).
+
+\footnotetext{Die automatische Integration, oder auch kontinuierliche Integration, ist ein Prozess aus der Softwareentwicklung, bei dem durch Veränderungen an der Codebase diese automatisch getestet wird. Des Weiteren werden automatische Reports erstellt, wodurch schnell fehlerhafte Änderungen erkannt werden \parencite[vgl.][]{noauthor_continuous_nodate}.}
