Korrektur vom Anhang wurde eingefuegt

--- a/sections/Anhang/rahles.tex
+++ b/sections/Anhang/rahles.tex
@@ -2,7 +2,7 @@
 \label{appendix:rahles}
 
 Interviewpartner: Christoph Rahles (R) \\
-Interviewee: Edgar Muss (E) \\
+Interviewer: Edgar Muss (E) \\
 Datum: 18. Juni 2020 um 18 Uhr \\
 Medium: Zoom
 
@@ -14,28 +14,28 @@ R: Darfst du.
 
 E: Dann würde ich gerne das Interview mit der ersten Frage starten.
 
-E: Haben Sie das Gefühl, dass es Bedingungen gibt, die PluralPolit erfüllen sollte, bevor es Ihre Softwarearchitektur zu einer Microservice-Architektur umstellt?
+E: Haben Sie das Gefühl, dass es Bedingungen gibt, die PluralPolit erfüllen sollte, bevor es ihre Softwarearchitektur zu einer Microservice-Architektur umstellt?
 
 R: Ja.
 
 E: Welche Bedingungen empfindest du als wichtig?
 
 \label{appendix:r-1}
-R: Zwei Dimensionen. Die eine Dimension ist ganz klar das Alter der Firma bzw. damit einher gehen der Reifegrad des Geschäftsmodells. Wie grundlegend sind Iteration zu erwarten, in Form von Softwarearchitektonischen Änderungen, was das Geschäftsmodell angeht oder wie man sie abbildet.
+R: Zwei Dimensionen. Die eine Dimension ist ganz klar, das Alter der Firma bzw. damit einhergehen der Reifegrad des Geschäftsmodells, wie grundlegend sind Iterationen zu erwarten, in Form von softwarearchitektonischen Änderungen, was das Geschäftsmodell angeht oder wie man sie abbildet.
 
 \label{appendix:r-2}
-R: Das ist der eine Punkt und auf der anderen Seite immer auch die Frage: Microservice-Architektur eröffnet ein Flexibilität, aber eben auch im gleichen Maß Komplexität.
+R: Das ist der eine Punkt und auf der anderen Seite immer auch die Frage: Microservice-Architektur eröffnet einem Flexibilität, aber eben auch im gleichen Maß Komplexität.
 
 \label{appendix:r-3}
-R: Das heißt es muss  jemanden geben, der die Verbindungen zwischen den Anwendungen beherrscht, monitort, administriert und aufsetzt und sich die Frage stellt: Ist es wirtschaftlich, Ja oder Nein?
+R: Das heißt es muss  jemanden geben, der die Verbindungen zwischen den Anwendungen beherrscht, monitort, administriert und aufsetzt und sich die Frage stellt: Ist es wirtschaftlich, ja oder nein?
 
 \label{appendix:r-4}
-R: Deswegen würde ich im Moment Nein sagen. Denn gerade im Fall eines jungen Unternehmens sollte man das Ziel haben, eine hohe Iterationsgeschwindigkeit zu besitzen, anstatt eine ausgeklügelten Architektur.
+R: Deswegen würde ich im Moment \enquote{nein} sagen. Denn gerade im Fall eines jungen Unternehmens sollte man das Ziel haben, eine hohe Iterationsgeschwindigkeit zu besitzen, anstatt eine ausgeklügelte Architektur.
 
 \label{appendix:r-5}
 R: Was jedoch nicht heißt, dass man die Qualität des Codes an sich vernachlässigen sollte.
 
-E: Okay es wurde viel vorgegriffen. Was völlig okay ist. Vielleicht springen wir einmal zur Frage 4, da vieles was du bereits gesagt hast, darauf angespielt.
+E: Okay es wurde viel vorgegriffen. Was völlig okay ist. Vielleicht springen wir einmal zur Frage 4, da vieles was du bereits gesagt hast, darauf anspielt.
 
 E: Ein Startup zeichnet sich dadurch aus, dass es insbesondere in der Anfangsphase zu vielen Veränderungen der ursprünglichen Geschäftsidee kommt. Microservices auf der anderen Seite zeichnen sich dadurch aus, dass sie feste Schnittstellen und Kontextgrenzen besitzen. Meinst du, dass trotzdem Microservices in einem dynamischen Umfeld eingesetzt werden sollten?
 
@@ -49,13 +49,13 @@ R: Wann sollte man es im Blick haben? Um vielleicht die Frage zu beantworten.
 R: Da gibt es, glaube ich kein Richtig und Falsch.
 
 \label{appendix:r-7}
-R: Man sollte sich immer die Fragen stellen: Aus einer rein technologisch, wirtschaftlich Perspektive macht es im Moment Sinn, ein Microservice auszugliedern? Weil das ist es im Moment.
+R: Man sollte sich immer die Fragen stellen: Aus einer rein technologischen, wirtschaftlichen Perspektive macht es im Moment Sinn, ein Microservice auszugliedern? Weil das ist es im Moment.
 
 \label{appendix:r-8} \label{appendix:r-9}
 R: Meistens ist es so, dass man mit einem Monolithen anfängt und irgendwann an einen Punkt kommt, wo es entweder sehr drückend wird oder wo man sagt: “Es macht Sinn Dinge auszulagern”.
 
 \label{appendix:r-10}
-R: Dann muss man sich die Frage stellen macht es Sinn und habe ich die Men-Power bzw. das Knowhow, um diese Komplexität zu verwalten. Was nicht heißt, dass ich das Wissen im Haus haben muss. Ich kann mir genauso gut Dienstleister suchen, die mich beim Aufbau der Infrastruktur unterstützt. Aber da ist eben immer die Frage: Kann ich auf das Knowhow zurückgreifen?
+R: Dann muss man sich die Frage stellen: Macht es Sinn und habe ich die Men-Power bzw. das Knowhow, um diese Komplexität zu verwalten. Was nicht heißt, dass ich das Wissen im Haus haben muss. Ich kann mir genauso gut Dienstleister suchen, die mich beim Aufbau der Infrastruktur unterstützen. Aber da ist eben immer die Frage: Kann ich auf das Knowhow zurückgreifen?
 
 \label{appendix:r-11}
 R: Weil das ist meine Erfahrung nach, der größte Tod den Unternehmen sterben, die zu schnell sagen: “Ich musste in Microservices rein” und die an ihrer Infrastruktur und der Komplexität der Architektur zu viel Zeit verlieren und im Gegensatz zu einem Mitbewerber nicht so schnell iterieren können. 
@@ -66,26 +66,26 @@ E: Okay, also gibt es keinen festen Zeitpunkt und es ist eher eine Entscheidung 
 R: Ja, ich würde gar nicht sagen, dass es zwingend von der Expertise des CTO abhängt. Dazu gehörte auch die Strategie der Firma, sowie die Ausrichtung der Produkte und folgende Fragen: 
 Welche Ziele hat das Unternehmen? Welche Ziele hat zum Beispiel der Sales-Bereich? Möchte dieser in neue Märkte expandieren, heißt das unter Umständen, dass es mit unterschiedlichen Skalierungseffekten rechnen muss.
 
-R: Also wir haben unterschiedliche Lastszenarien für einen Teil der Applikation, sagen wir mal Deutschland, versus Indien zum Beispiel. Oder gibt es, auch wieder am selben Beispiel genommen, Latenzprobleme, die auftreten da man sagt: “Alles wird an einer Stelle gespeichert.” Dann habe ich das Problem, dass für den indischen Kunden nicht mehr in der richtigen Geschwindigkeit bereitgestellt wird. Oder wenn ich die Applikation nach Indien Verlage, dass es für den deutschen Kunden nicht mehr richtig dargestellt wird. Gerade solche Probleme kann man natürlich durch Microservices lösen, aber es ist immer im gesamt Kontext der Firma zu sehen. Natürlich ist der CTO dabei eine treibend Kraft.
+R: Also wir haben unterschiedliche Lastszenarien für einen Teil der Applikation, sagen wir mal Deutschland, versus Indien zum Beispiel oder gibt es, auch wieder am selben Beispiel genommen, Latenzprobleme, die auftreten, da man sagt: Alles wird an einer Stelle gespeichert. Dann habe ich das Problem, dass für den indischen Kunden das die Anwendung nicht mehr in der richtigen Geschwindigkeit bereitgestellt wird oder wenn ich die Applikation nach Indien verlege, dass es für den deutschen Kunden nicht mehr richtig dargestellt wird. Gerade solche Probleme kann man natürlich durch Microservices lösen, aber es ist immer im gesamt Kontext der Firma zu sehen. Natürlich ist der CTO dabei eine treibende Kraft.
 
 \label{appendix:r-13}
-R: Es ist die Person mit der Expertise, aber es steht und fällt immer mit der Ausrichtung des Geschäfts bzw. mit dem Rest Unternehmens.
+R: Es ist die Person mit der Expertise, aber es steht und fällt immer mit der Ausrichtung des Geschäfts bzw. mit dem Rest des Unternehmens.
 
 \label{appendix:r-14}
-R: So macht es keinen Sinn, wenn ich jetzt sage, ich fange an, irgendwelche Komponenten raus zu brechen, wenn absehbar ist, dass am Ende des Jahres auf diesen Part kein Fokus mehr gelegt wird.
+R: So macht es keinen Sinn, wenn ich jetzt sage, ich fange an, irgendwelche Komponenten raus zu brechen, wenn absehbar ist, dass am Ende des Jahres auf diesen Teil kein Fokus mehr gelegt wird.
 
 R: So beispielsweise wenn ich jetzt eine Komponente der Anwendung auf Konsumenten auslege, und es absehbar ist, dass ab nächstem Jahr sich hauptsächlich auf Unternehmenskunden konzentriert wird. Dann würde ich nicht sagen, dass das eine sinnvolle Entscheidung ist. Auch wenn es aus dem rein architektonischen Ansatz Sinn ergibt.
 
 E: Ja, da gehe ich absolut mit. Weil du einmal die Unabhängigkeit von Teams angesprochen hast würde ich gerne auf Frage 2 eingehen.
 
-E: Microservices ermöglichen es Teams, unabhängig voneinander an unterschiedlichen Services zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten kann?
+E: Microservices ermöglichen es Teams, unabhängig voneinander an unterschiedlichen Services zu arbeiten. Welche Rahmenbedingungen sehen Sie als notwendig, dass Teams separat voneinander arbeiten können?
 
 \label{appendix:r-15}
-R: Gute Frage, ich wäre da ein bisschen vorsichtig. Unabhängig voneinander arbeiten, Ja. Unterschiedlich, ich würde es eher sagen in unterschiedlich schnellen Iterationsschritten. Auch diese Teams gehören zu einem Unternehmen. Diese Teams tragen zu einem Gesamtunternehmen bei, das heißt unabhängig voneinander sind sie nie.
+R: Gute Frage, ich wäre da ein bisschen vorsichtig. Unabhängig voneinander arbeiten, ja. Unterschiedlich, ich würde es eher sagen in unterschiedlich schnellen Iterationsschritten. Auch diese Teams gehören zu einem Unternehmen. Diese Teams tragen zu einem Gesamtunternehmen bei, das heißt unabhängig voneinander sind sie nie.
 Also ja, es kann sein, dass ein Service mal nicht mit einem anderen Microservice redet, aber in der Regel ist das ja das große Feature von Microservices, dass ich Microservices über definierte Schnittstellen miteinander verbinden kann.
 
 \label{appendix:r-16}
-R: Welche Rahmenbedingungen notwendig sind? Also die Teams müssen auf der einen Seite so interdisziplinär aufgestellt sein, dass sie wirklich unabhängig voneinander arbeiten können. Einfach skill technisch. Ich brauche jemanden, der sich um Infrastruktur, Softwareentwicklung und Qualität kümmern kann.
+R: Welche Rahmenbedingungen notwendig sind? Also die Teams müssen auf der einen Seite so interdisziplinär aufgestellt sein, dass sie wirklich unabhängig voneinander arbeiten können. Einfach skill-technisch, ich brauche jemanden, der sich um Infrastruktur, Softwareentwicklung und Qualität kümmern kann.
 \label{appendix:r-17}
 R: Ich denke, es macht nur dann Sinn, wenn Microservices einen ganz klaren eigenen Fokus haben.
 
