--- a/sections/Anhang/schlaak.tex
+++ b/sections/Anhang/schlaak.tex
@@ -3,7 +3,7 @@
 \label{appendix:schlaak}
 
 Interviewpartner: Sebastian Schlaak (S) \\
-Interviewee: Edgar Muss (E) \\
+Interviewer: Edgar Muss (E) \\
 Datum: 24. Juni 2020 um 10 Uhr \\
 Medium: Zoom
 
