--- a/sections/Anhang/troppmann.tex
+++ b/sections/Anhang/troppmann.tex
@@ -2,7 +2,7 @@
 \label{appendix:troppmann}
 
 Interviewpartner: Alexander Troppmann (T) \\
-Interviewee: Edgar Muss (E) \\
+Interviewer: Edgar Muss (E) \\
 Datum: 21. Juni 2020 um 19 Uhr \\
 Medium: Zoom
 
