Letzten Veraenderungen wegen Zeilenumbrueche

--- a/sections/Theory/software-architektur.tex
+++ b/sections/Theory/software-architektur.tex
@@ -37,7 +37,7 @@ Da die unterschiedlichen Architekturstile nicht im  Fokus dieser Bachelorarbeit 
 
 Nach Andrew Tanenbaum werden verteilte Systeme als eine Menge unabhängiger Computer bezeichnet, die dem Benutzer wie ein einzelnes, kohärentes System erscheinen \parencite{tanenbaum_verteilte_2007}.
 
-Weiterführend beschreibt Gernot Starke die einzelnen Komponenten als entweder Verarbeitungs- oder Speicherbausteine, die über definierte Schnittstellen innerhalb eines Kommunikationsnetzes zusammenarbeiten \parencite[vgl.][S. 116]{starke_effektive_2015}.
+Gernot Starke beschreibt die einzelnen Komponenten weiter als entweder Verarbeitungs- oder Speicherbausteine, die über definierte Schnittstellen innerhalb eines Kommunikationsnetzes zusammenarbeiten \parencite[vgl.][S. 116]{starke_effektive_2015}.
 
 Im Gegensatz zur Definition von Softwarearchitektur grenzt sich das verteilte System dadurch ab, dass von unabhängigen Computern geredet wird. Dadurch entstehen einige Vorteile. So lassen sich auf Grund der Unabhängigkeit, diese einzelnen Rechner unterschiedlich skalieren. Es entsteht ein Netzwerk an heterogenen Computern, da je nach Anforderung der einzelnen Komponenten, eine entsprechende Rechenleistung genutzt werden kann.
 
