Letzte korrekturen von Sitaya

--- a/sections/Abstract.tex
+++ b/sections/Abstract.tex
@@ -1,8 +1,7 @@
 \section*{Abstract}
 
 %Problemstellung
-Mit wachsender Codebase erhöht sich der Aufwand, der notwendig ist, um neue Funktionen zu entwickeln und zu implementieren. Dies liegt besonders daran, dass sich im Laufe der Entwicklung viele Abhängigkeiten zwischen Klassen und Methoden entwickelt haben, die eine schnelle Weiterentwicklung hemmen. Um dem entgegen zu wirken, hat PluraPolit beschlossen, die aktuelle monolithische Softwarearchitektur in eine Microservice-Architektur umzustellen.
-
+Mit wachsender Codebase erhöht sich der Aufwand, der notwendig ist, um neue Funktionen zu implementieren. Dies liegt besonders daran, dass sich im Laufe der Entwicklung viele Abhängigkeiten zwischen Klassen und Methoden ergeben haben, die eine schnelle Weiterentwicklung hemmen. Um dem entgegen zu wirken, hat PluraPolit beschlossen, die aktuelle monolithische Softwarearchitektur in eine Microservice-Architektur umzustellen.
 
 %Zielsetzung
 Das Ziel dieser Abhandlung ist es, für PluraPolit die Bedingungen zu ermitteln, die für eine mögliche Umstellung erforderlich sind und eine klare Beurteilung für das Vorhaben abzugeben.
@@ -19,7 +18,7 @@ Die Ergebnisse zeigten, dass vor der Umstellung folgende Bedingungen erfüllt se
 	\item Es ist möglich, die Verantwortung für ein Geschäftsprozess an ein eigenständiges Team zu geben
 	\item Die Services können untereinander über Schnittstellen kommunizieren
 	\item Das Netzwerk ermöglicht die Kommunikation zwischen Services
-	\item Das Netzwerk ist vor Zugriffen von Ungefugten gesichert
+	\item Das Netzwerk ist vor Zugriffen von Unbefugten gesichert
 \end{enumerate}
 
 Als wichtigste Bedingung stellte sich die Bewertung der Profitabilität heraus, welche vom zu erwartenden Mehrwert und den notwendigen Kosten abhängt.
