--- a/sections/Fazit.tex
+++ b/sections/Fazit.tex
@@ -17,7 +17,7 @@ Die Ergebnisse haben schließlich gezeigt, dass vor der Umstellung folgende Bedi
 	\item Es ist möglich, die Verantwortung für ein Geschäftsprozess an ein eigenständiges Team zu geben
 	\item Die Services können untereinander über Schnittstellen kommunizieren
 	\item Das Netzwerk ermöglicht die Kommunikation zwischen Services
-	\item Das Netzwerk ist vor Zugriffen von Ungefugten gesichert
+	\item Das Netzwerk ist vor Zugriffen von Unbefugten gesichert
 \end{enumerate}
 
 Da PluraPolit zum aktuellen Zeitpunkt weder eine ausreichende Komplexität, noch trennbare Geschäftsabläufe aufweist, ist die Notwendigkeit für eine Umstellung nicht erfüllt. Entgegen der Vorannahmen, dass Microservices eine schnelle Weiterentwicklung sicherstellt, konnten keine nachvollziehbaren Vorteile festgestellt werden. Gleichzeitig ist es absehbar, dass die Kosten für das Unternehmen aufgrund notwendiger Schulungen oder dem Einsatz externe Fachkräfte steigen werden. Demnach ist für PluraPolit eine Umstellung von einer monolithischen auf eine Microservice-Architektur zum aktuellen Zeitpunkt nicht zu empfehlen.
