--- a/sections/Theory/bedingungen.tex
+++ b/sections/Theory/bedingungen.tex
@@ -35,7 +35,7 @@ Aus der Literaturrecherche ergeben sich zusammenfassend neun Bedingungen:
 	\item Das System weist eine gewisse Komplexität auf
 	\item Die Geschäftsabläufe lassen sich voneinander trennen
 	\item Das Netzwerk ermöglicht die Kommunikation zwischen den Services
-	\item Das Netzwerk ist vor Zugriffen von Ungefugten gesichert
+	\item Das Netzwerk ist vor Zugriffen von Unbefugten gesichert
 	\item Das Netzwerk hat ein hohen Datendurchsatz
 	\item Die Services verfügen über Schnittstellen, die Server-zu-Server-Kommunikation ermöglichen
 	\item Es liegt ein Product-Market Fit vor
