--- a/sections/Theory/software-architektur.tex
+++ b/sections/Theory/software-architektur.tex
@@ -2,7 +2,7 @@
 
 Seitdem die ersten Großrechner gebaut wurden und ein Projekt nicht mehr von einem Team allein entwickelt werden konnte, entstand der Bedarf komplexe Systeme aufzuteilen und zu strukturieren. So war es schon in den 60er Jahren notwendig, die Entwicklung des Betriebssystems OS/360 von IBM auf mehrere Teams aufzuteilen und klare Schnittstellen zwischen den Teilen zu bestimmen \parencite{brooks_mythical_1995}. Es entwickelte sich daraus eine der ersten Anwendungen und Umsetzungen von Softwarearchitektur, welche erstmalig 1969 bei einer Softwaretechnik Konferenz in Rom auch als solche bezeichnet wurde \parencite[vgl.][S. 12]{buxton_software_1970}.
 
-Im Jahr 2000 erschien die IEEE1471:2000 Norm, welche am 15. Juli 2007 als ISO/IEC 42010 übertragen wurde und Softwarearchitektur erstmalig definierte. In dieser Norm werden Anforderungen an die Beschreibung von System-, Software- und Unternehmensarchitekturen genauer beschrieben \parencite{hilliard_isoiecieee_nodate}.
+Im Jahr 2000 erschien die IEEE1471:2000 Norm, welche am 15. Juli 2007 als ISO/IEC 42010 übertragen wurde und Softwarearchitektur erstmalig definierte. In dieser Norm werden Anforderungen an die Beschreibung von System-, Software- und Unternehmensarchitekturen genauer bestimmt \parencite{hilliard_isoiecieee_nodate}.
 
 \subsubsection{Definition}
 \label{sec:software-architect-definition}
