Die Korrekturen wurden geloetscht

--- a/sections/Theory/software-architektur.tex
+++ b/sections/Theory/software-architektur.tex
@@ -137,7 +137,7 @@ Vergleicht man das monolithische System mit einem verteilten System, gibt es Vor
 
 Andererseits vereinfacht nur eine Anwendung die Fehlersuche und ermöglicht es Funktionen mehrfach zu verwenden. Das verursacht jedoch, dass schnell Abhängigkeiten entstehen können und Änderungen zu Fehlern führen. Dadurch wird die Umsetzung von neuen Funktionen mit wachsender Codebase verlangsamt und der Einstieg von neuen Teammitgliedern erschwert.
 
-Da alle Entwickler eines Unternehmens auf eine Codebase zugreifen und über z.~B. Github asynchrone arbeiten, kommt es schnell zu Unterschieden im Programmcode. So führt ein Monolith dazu, dass bei einer großen Anzahl von Entwicklern viele Absprachen notwendig sind \parencite[vgl.][Kap. 2.2.4]{newman_monolith_2019}.
+Da alle Entwickler eines Unternehmens auf eine Codebase zugreifen und über z.~B. Github asynchron arbeiten, kommt es schnell zu Unterschieden im Programmcode. So führt ein Monolith dazu, dass bei einer großen Anzahl von Entwicklern viele Absprachen notwendig sind \parencite[vgl.][Kap. 2.2.4]{newman_monolith_2019}.
 
 Anders ist es bei systemübergreifenden Tests, diese werden durch ein monolithisches System begünstigt und können im Vergleich zu einem verteilten System einfacher umgesetzt werden  \parencite[vgl.][Kap. 2.2.5]{newman_monolith_2019}.
 
